--- a/edit.html
+++ b/edit.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Song Front End</title>
-    <script src="scripts/edit.js"></script>
+    <script src="./scripts/edit.js"></script>
   </head>
   <body>
     <nav>
-      <a href="/index.html">Songs</a>
-      <a href="/add_song.html">Add Song</a>
+      <a href="./index.html">Songs</a>
+      <a href="./add_song.html">Add Song</a>
     </nav>
     <form>
       <div>
