--- a/add_song.html
+++ b/add_song.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Song Front End</title>
     <script src="./scripts/add_song.js"></script>
+    <script defer src="./scripts/auth.js"></script>
+    <script defer src="./scripts/init.js"></script>
   </head>
   <body>
     <nav>
       <a href="./index.html">Songs</a>
       <a href="./add_song.html">Add Song</a>
+      <a href="./delete.html">Delete Song</a>
+      <button id="logout" style="float: right">Logout</button>
     </nav>
     <h1>Add a Song</h1>
     <form>
@@ -36,8 +40,7 @@
       <div>
         <input type="button" id="addBtn" value="Add Song" />
       </div>
-      <div id="error">
-      </div>
+      <div id="error"></div>
     </form>
   </body>
 </html>
