--- a/delete.html
+++ b/delete.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Song Front End</title>
-    <script src="./scripts/script.js"></script>
-    <script defer src="./scripts/auth.js"></script>
+    <script src="./scripts/delete.js"></script>
+        <script defer src="./scripts/auth.js"></script>
     <script defer src="./scripts/init.js"></script>
   </head>
   <body>
@@ -15,9 +15,11 @@
       <a href="./delete.html">Delete Song</a>
       <button id="logout" style="float: right">Logout</button>
     </nav>
-    <h1>Songs</h1>
-    <ul>
-      <div id="list_of_songs"></div>
-    </ul>
+    <h1>Delete a Song</h1>
+    <form>
+      <select id="songDropDown"></select>
+      <input type="button" value="Delete" id="deleteBtn" />
+      <div id="error"></div>
+    </form>
   </body>
 </html>
