--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
         </button>
         <p id="errorMsg"></p>
       </form>
-      <p>Not registered? <a href="registration.html">Click Here to Register</a></p>
+      <p>Not registered? <a href="./registration.html">Click Here to Register</a></p>
 
       <button id="statusBtn">Display Status</button>
 
