--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./scripts/script.js"></script>
     <script defer src="./scripts/auth.js"></script>
     <script defer src="./scripts/init.js"></script>
+    <base href="/frontend/" />
   </head>
   <body>
     <nav>
